# first-docker-project-vectorization-rag-project

./: .gitignore  CLAUDE.md  Dockerfile.simple  PRODUCTION-ARCHITECTURE.md  README.md  docker-compose.simple.yml  docker-compose.yml  generate_flight_data.py  pyproject.toml  requirements.txt  seed_data.py  seed_vector_database.py  start.sh
.claude/: settings.local.json
data/: flights_dataset.json  sample_flights.json
k8s/: configmap.yaml  console-frontend-deployment.yaml  deploy.ps1  deploy.sh  llm-service-deployment.yaml  manage.ps1  monitoring.yaml  namespace.yaml  rag-service-deployment.yaml  vector-db-deployment.yaml
services/console-frontend/: Dockerfile  main.py  requirements.txt
services/llm-service/: Dockerfile  intent_detector.py  main.py  requirements.txt
services/rag-service/: Dockerfile  main.py  requirements.txt
services/vector-db/: Dockerfile  main.py  requirements.txt
