[project]
name = "flight-rag-system"
version = "0.1.0"
description = "Flight search system using RAG and vector databases"
authors = [
    {name = "Drew Sullivan", email = "drewosuly@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "httpx>=0.25.2",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "chromadb>=0.4.15",
    "google-generativeai>=0.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ['py311']